--- a/minireddit/public/index.html
+++ b/minireddit/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MiniReddit</title>
+    <title>tic tac toe</title>
   </head>
   <body>
     <div id="root"></div>
